--- a/app/globals.css
+++ b/app/globals.css
@@ -3,3 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    font-family: "Roboto", sans-serif;
+    background-color: #EDEDED;
+    padding: 25px;
+    overflow-x: hidden;
+}
