--- a/app/src/styles/pages/chat.module.css
+++ b/app/src/styles/pages/chat.module.css
@@ -3,3 +3,40 @@
     display: flex;
     column-gap: 20px;
 }
+
+.chat div label {
+    position: fixed;
+    bottom: 25px;
+    width: 950px;
+    background-color: #d9d9d9;
+    padding: 20px 50px;
+    border-radius: 10px;
+    cursor: pointer;
+    color: #929292;
+    font-size: 38px;
+
+    &::placeholder {
+        opacity: 0;
+    }
+}
+
+.chat input {
+    opacity: 0;
+}
+
+.chat div button {
+    position: fixed;
+    bottom: 25px;
+    right: 25px;
+    width: 50px;
+    height: 50px;
+    padding: 40px;
+    border: 0;
+    border-radius: 50%;
+    background-color: #329A93;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-size: 48px;
+}
